--- a/Flask/FlaskMarket/requirements.txt
+++ b/Flask/FlaskMarket/requirements.txt
@@ -1,13 +1,20 @@
 alembic==1.13.1
 astroid==3.0.2
+bcrypt==4.1.2
+Bcrypt-Flask==1.0.2
 blinker==1.7.0
 click==8.1.7
 dill==0.3.8
+dnspython==2.5.0
+email-validator==2.1.0.post1
 Flask==3.0.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+idna==3.6
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
